<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_margin="30dp"
        android:src="@drawable/avengers_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="Logo of the screen" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/txt_password"
        android:backgroundTint="#DC2D0E"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_registered_mobile_number_here"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/img_logo"
        android:maxLength="10"
        android:inputType="phone"
        android:maxLines="1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@id/txt_username"
        android:inputType="textPassword"
        android:maxLines="1"
        android:autofillHints="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:text="@string/register_yourself"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:backgroundTint="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot"
        android:backgroundTint="#ffffff"
        android:text="@string/forgot_password"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="#000000"
        android:layout_centerHorizontal="true" />
</RelativeLayout>